# dots-and-boxes

./: .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-and-deploy.yml  deploy.yml  verify.yml
.github/workflows.yml/: deploy.yml  verify.yml
assets/: index.19ef08c9.js  index.39b320e3.js  index.525d8cb6.js  index.59c8bb15.js  index.5f18d9a0.css  index.820ef247.css  index.968d57c1.js  index.984aa6f4.js  index.b47870fa.css  index.f52a5f4f.css  index.fb07ac6b.js  wasm_bg.24c1de93.wasm  wasm_bg.2e8d81c5.wasm  wasm_bg.7559583d.wasm  wasm_bg.d631e304.wasm  wasm_bg.dacd623d.wasm
client/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
client/src/: App.svelte  app.css  constants.ts  enums.ts  main.ts  stores.ts  utils.ts
client/src/Components/: Game.svelte  Layout.svelte
client/src/Components/Board/: Background.svelte  Box.svelte  Dot.svelte  Game.svelte  Line.svelte  Score.svelte
client/src/Components/Board/Lines/: Horizontal.svelte  (+3 more)
client/src/Components/Modals/: Leaderboard.svelte  Modal.svelte  Settings.svelte
client/src/Components/Navigation/: Button.svelte  Sidebar.svelte
client/src/Components/SVG/: Background.svelte
client/wasm/: Cargo.toml  bacon.toml  package-lock.json  package.json  update_package_json.js
client/wasm/src/: game.rs  lib.rs  utils.rs
client/wasm/src/game/: board.rs  mod.rs  properties.rs
server/: package-lock.json  package.json  tsconfig.json
server/src/: constants.ts  database.ts  index.ts
server/src/routes/: matches.ts  user.ts
