[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.60"
owning_ref = "0.4.1"
petgraph = "0.6.3"
rand = "0.8.5"
wasm-bindgen = "0.2.83"
wasm-timer = "0.2.5"
getrandom = { version = "0.2", features = ["js"] }

web-sys = { version= "0.3.60", features = ["console","Window"] }